--- a/flowers_detector_resnet152_model.ipynb
+++ b/flowers_detector_resnet152_model.ipynb
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "my_data= 'C:\\\\Users\\\\Malith\\\\AI\\\\Practise\\\\DL_assignment\\\\flowers'\n",
+    "my_data= 'C:\\\\Users\\\\Praneeth\\\\AI\\\\Practise\\\\DL_assignment\\\\flowers'\n",
     "my_data"
    ]
   },
@@ -129,20 +129,9 @@
    "execution_count": 46,
    "id": "e2634016",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\Malith\\\\AI\\\\Practise\\\\DL_assignment/flowers\\\\train'"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_folder = 'C:\\\\Users\\\\Malith\\\\AI\\\\Practise\\\\DL_assignment/flowers'\n",
+    "data_folder = 'C:\\\\Users\\\\Praneeth\\\\AI\\\\Practise\\\\DL_assignment/flowers'\n",
     "\n",
     "import os\n",
     "import shutil\n",
@@ -291,7 +280,7 @@
     "\n",
     "classes = ['daisy', 'dandelion', 'rose', 'sunflower', 'tulip']\n",
     "\n",
-    "data_dir = 'C:\\\\Users\\\\Malith\\\\AI\\\\Practise\\\\DL_assignment/flowers'\n",
+    "data_dir = 'C:\\\\Users\\\\Praneeth\\\\AI\\\\Practise\\\\DL_assignment/flowers'\n",
     "\n",
     "total_counts = []\n",
     "total = 0\n",
