--- a/Flowers_detector_VGG16_model.ipynb
+++ b/Flowers_detector_VGG16_model.ipynb
@@ -6275,7 +6275,7 @@
         "# Load the pre-trained VGG16 model without the top layers\n",
         "model = VGG16(weights='imagenet')  # Use 'weights=None' if you want to load a custom saved model\n",
         "\n",
-        "# Load and preprocess the image\n",
+        "# Load and preprocess the image photo\n",
         "image_path = '/content/drive/MyDrive/DL/flowers/sunflower/1008566138_6927679c8a.jpg'\n",
         "image = Image.open(image_path)\n",
         "image = image.resize((224, 224))\n",
